syntax = "proto3";
package DecentralCardGame.cardchain.cardchain;

option go_package = "github.com/DecentralCardGame/Cardchain/x/cardchain/types";
import "cardchain/vote_right.proto";

message User {

  string alias = 1;
  repeated uint64 ownedCardSchemes = 2;
  repeated uint64 ownedPrototypes = 3;
  repeated uint64 cards = 4;
  repeated VoteRight voteRights = 5;
  CouncilStatus CouncilStatus = 6;
  bool ReportMatches = 7;
}

enum CouncilStatus {
  available = 0;
  unavailable = 1;
  openCouncil = 2;
  startedCouncil = 3;
}
